# haclog

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  README_cn.md  build.sh  build_and_test.bat  build_android.sh  build_with_cmake.bat  build_with_cmake.sh  build_with_meson.bat  build_with_meson.sh  meson.build  meson.options  run_test_and_benchmark.bat  run_test_and_benchmark.sh
.github/workflows/: android-cmake.yaml  linux-clang.yaml  linux-gcc.yaml  macos-arm64-clang.yaml  macos-clang.yaml  macos-intel-clang.yaml  win-msvc.yaml
benchmark/haclog/: main.c
benchmark/multi_thread_benchmark/: main.c
cmake/: haclog.pc.in  haclogConfig.cmake.in
dev_test/multi_thread_benchmark/: main.c
dev_test/run_bytes_buf/: main.c
dev_test/serialize/: main.c
dev_test/thread_ctx_auto_init/: main.c
dev_test/vsprintf_show/: main.c
doc/: release_notes.md
doc/img/: haclog.excalidraw
example/hello/: main.c
example/multi_thread_benchmark/: main.c
example/serialize/: main.c
gbenchmark/haclog/: main.cpp
haclog/: haclog.h  haclog_bytes_buffer.c  haclog_bytes_buffer.h  haclog_config.h.in  haclog_context.c  haclog_context.h  haclog_err.c  haclog_err.h  haclog_log.c  haclog_log.h  haclog_macro.h  haclog_os.c  haclog_os.h  haclog_path.c  haclog_path.h  haclog_sleep.c  haclog_sleep.h  haclog_spinlock.c  haclog_spinlock.h  haclog_stacktrace.c  haclog_stacktrace.h  haclog_thread.c  haclog_thread.h  haclog_thread_context.c  haclog_thread_context.h  haclog_time.h  haclog_vsprintf.c  haclog_vsprintf.h  haclog_win_gmtime.c  haclog_win_gmtime.h
haclog/handler/: haclog_console_handler.c  haclog_console_handler.h  haclog_file_handle.c  haclog_file_handler.h  haclog_file_rotate_handler.c  haclog_file_rotate_handler.h  haclog_file_time_rot_handler.c  haclog_file_time_rot_handler.h  haclog_handler.c  haclog_handler.h
subprojects/: google-benchmark.wrap  unity.wrap
test/bytes_buf/: test_bytes_buf.c
test/err/: test_err.c
test/log/: test_log.c  test_log_handler.c  test_log_handler.h
test/long_message/: test_long_message.c
test/round_to/: test_round_to.c
test/serialize_fmt/: test_serialize_fmt.c
test/spinlock/: test_spinlock.c
test/thread/: test_thread.c
test/thread_context/: test_thread_context.c
test/vsprintf/: test_vsprintf.c
